src/objects/LaunchCal__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>LaunchCals</relationshipLabel>
        <relationshipName>LaunchCals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval_Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedBy</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>LaunchCals</relationshipLabel>
        <relationshipName>CreatedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Launch_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <label>Product_Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>created_Date__c</fullName>
        <label>created_Date</label>
        <type>Date</type>
    </fields>
    <label>LaunchCal</label>
    <nameField>
        <label>LaunchCal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LaunchCals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>